--- a/view/frontend/templates/crisp.phtml
+++ b/view/frontend/templates/crisp.phtml
@@ -2,8 +2,18 @@
 $helper         = $this->helper('Magepow\Crispchat\Helper\Data');
 $crispWebsiteId = $helper->getConfigModule('general/crisp_website_id');
 if(!$crispWebsiteId) return;
+$noJs = $helper->getConfigModule('general/no_js');
 ?>
-<script type="text/javascript">
+<?php if(!$noJs) : ?>
+    <link rel="preload" href="https://client.crisp.chat/l.js" as="script">
+    <script type="text/javascript">
+        require(['jquery'], function($){
+            "use strict";
+            window.$crisp=[];window.CRISP_WEBSITE_ID="<?php echo $crispWebsiteId ?>";(function(){let d=document; let s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();
+        });
+    </script>
+<? else : ?>
+    <script type="text/javascript">
     require(['jquery'], function($){
         "use strict";
         $("body").one("mousemove", function() {
@@ -11,3 +21,4 @@ if(!$crispWebsiteId) return;
         });
     });
 </script>
+<?php endif ?>
