--- a/view/frontend/templates/crisp.phtml
+++ b/view/frontend/templates/crisp.phtml
@@ -11,8 +11,8 @@ if(!$crispWebsiteId) return;
             window.$crisp=[];window.CRISP_WEBSITE_ID="<?php echo $crispWebsiteId ?>";(function(){let d=document; let s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();
             <?php if($customer->isLoggedIn()) : ?>
                 <?php $info = $customer->getCustomer(); ?>
-                $crisp.push(["set", "user:email", ["<?php echo $info->getEmail() ?>"]]);
-                $crisp.push(["set", "user:nickname", ["<?php echo $info->getName() ?>"]]);
+                $crisp.push(["set", "user:email", "<?php echo $info->getEmail() ?>"]);
+                $crisp.push(["set", "user:nickname", "<?php echo $info->getName() ?>"]);
             <?php endif; ?>
         });
     });
